# discord-termview

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh
src/: discord.rs  main.rs  parser.rs  session.rs  terminal.rs
