[package]
name = "discord-termview"
version = "0.1.0"
authors = ["simon.larsson <simon.larsson@elits.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
async-trait = "*"
